[gd_scene load_steps=32 format=2]

[ext_resource path="res://characters/scripts/Ghost.gd" type="Script" id=1]
[ext_resource path="res://characters/assets/ghost/idle/ghost1.png" type="Texture" id=2]
[ext_resource path="res://characters/assets/ghost/idle/ghost2.png" type="Texture" id=3]
[ext_resource path="res://characters/assets/ghost/idle/ghost3.png" type="Texture" id=4]
[ext_resource path="res://characters/assets/ghost/idle/ghost4.png" type="Texture" id=5]
[ext_resource path="res://characters/assets/ghost/idle/ghost5.png" type="Texture" id=6]
[ext_resource path="res://characters/assets/ghost/idle/ghost6.png" type="Texture" id=7]
[ext_resource path="res://characters/assets/ghost/idle/ghost7.png" type="Texture" id=8]
[ext_resource path="res://characters/assets/ghost/idle/ghost8.png" type="Texture" id=9]
[ext_resource path="res://characters/assets/ghost/idle/ghost9.png" type="Texture" id=10]
[ext_resource path="res://characters/assets/ghost/idle/ghost10.png" type="Texture" id=11]
[ext_resource path="res://characters/assets/ghost/idle/ghost11.png" type="Texture" id=12]
[ext_resource path="res://characters/assets/ghost/idle/ghost12.png" type="Texture" id=13]
[ext_resource path="res://characters/assets/ghost/idle/ghost13.png" type="Texture" id=14]
[ext_resource path="res://characters/assets/ghost/idle/ghost14.png" type="Texture" id=15]
[ext_resource path="res://characters/assets/ghost/idle/ghost15.png" type="Texture" id=16]
[ext_resource path="res://characters/assets/ghost/idle/ghost16.png" type="Texture" id=17]
[ext_resource path="res://characters/assets/ghost/out/ghost-out1.png" type="Texture" id=18]
[ext_resource path="res://characters/assets/ghost/out/ghost-out2.png" type="Texture" id=19]
[ext_resource path="res://characters/assets/ghost/out/ghost-out3.png" type="Texture" id=20]
[ext_resource path="res://characters/assets/ghost/out/ghost-out4.png" type="Texture" id=21]
[ext_resource path="res://characters/assets/ghost/out/ghost-out5.png" type="Texture" id=22]
[ext_resource path="res://characters/assets/ghost/out/ghost-out6.png" type="Texture" id=23]
[ext_resource path="res://characters/assets/ghost/out/ghost-out7.png" type="Texture" id=24]
[ext_resource path="res://characters/assets/ghost/out/ghost-out8.png" type="Texture" id=25]
[ext_resource path="res://characters/assets/ghost/out/ghost-out9.png" type="Texture" id=26]
[ext_resource path="res://characters/assets/ghost/scream.wav" type="AudioStream" id=27]
[ext_resource path="res://characters/assets/ghost/enter_body.wav" type="AudioStream" id=28]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 12 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 16 )

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null, null, ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "out",
"speed": 8.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 24 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ) ],
"loop": false,
"name": "in",
"speed": 8.0
} ]

[node name="Ghost" type="KinematicBody2D"]

input_pickable = false
collision_layer = 2
collision_mask = 24
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]
speed = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="2"]

frames = SubResource( 3 )
animation = "default"
playing = true

[node name="Scream" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 27 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="EnterBody" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 28 )
volume_db = -10.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]


